@@ -1,7 +1,7 @@
 module Thin
-  module Connectors
+  module Backends
     # Connectior to act as a TCP socket server.
-    class TcpServer < Connector
+    class TcpServer < Base
       # Address and port on which the server is listening for connections.
       attr_accessor :host, :port
       
